removed isAdmin boolean from user table & general refactoring. There are some issues with the security